crates/formatter/tests/snapshots/snapshots__coder__migrations__000334_dynamic_parameters_opt_out.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates alter column use_classic_parameter_flow set default false;

update templates set use_classic_parameter_flow = false;
