crates/formatter/tests/snapshots/snapshots__coder__migrations__000334_dynamic_parameters_opt_out.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- All templates should opt out of dynamic parameters by default.
alter table templates alter column use_classic_parameter_flow set default true;

update templates set use_classic_parameter_flow = true;
