crates/formatter/tests/snapshots/snapshots__coder__migrations__000338_use_deleted_boolean_for_subagents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore prebuilds, previously modified in 000323_workspace_latest_builds_optimization.up.sql.
drop view workspace_prebuilds;

create view workspace_prebuilds as
with
	all_prebuilds as (
		select w.id, w.name, w.template_id, w.created_at
		from workspaces w
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	),
	workspaces_with_latest_presets as (
		select distinct on (workspace_builds.workspace_id)
			workspace_builds.workspace_id, workspace_builds.template_version_preset_id
		from workspace_builds
		where (workspace_builds.template_version_preset_id is not null)
		order by workspace_builds.workspace_id, workspace_builds.build_number desc
	),
	workspaces_with_agents_status as (
		select
			w.id as workspace_id,
			bool_and(
				(wa.lifecycle_state = 'ready'::workspace_agent_lifecycle_state)
			) as ready
		from (
			(
				(
					workspaces w
						join workspace_latest_builds wlb on ((wlb.workspace_id = w.id))
				)
					join workspace_resources wr on ((wr.job_id = wlb.job_id))
			)
				join workspace_agents wa on ((wa.resource_id = wr.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
		group by w.id
	),
	current_presets as (
		select w.id as prebuild_id, wlp.template_version_preset_id
		from (
			workspaces w
				join workspaces_with_latest_presets wlp on ((wlp.workspace_id = w.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	)
select
	p.id,
	p.name,
	p.template_id,
	p.created_at,
	coalesce(a.ready, false) as ready,
	cp.template_version_preset_id as current_preset_id
from (
	(
		all_prebuilds p
			left join workspaces_with_agents_status a on ((a.workspace_id = p.id))
	)
		join current_presets cp on ((cp.prebuild_id = p.id))
);

-- Restore trigger without deleted check.
drop trigger if exists workspace_agent_name_unique_trigger on workspace_agents;
drop function IF exists check_workspace_agent_name_unique();

create or replace function check_workspace_agent_name_unique()
returns trigger
language plpgsql
as $$
declare
	workspace_build_id uuid;
	agents_with_name int;
begin
	-- Find the workspace build the workspace agent is being inserted into.
	select workspace_builds.id
	into workspace_build_id
	from workspace_resources
		join workspace_builds
			on workspace_builds.job_id = workspace_resources.job_id
	where workspace_resources.id = NEW.resource_id;

	-- If the agent doesn't have a workspace build, we'll allow the insert.
	if workspace_build_id is null then
		return NEW;
	end if;

	-- Count how many agents in this workspace build already have the given agent name.
	select count(*)
	into agents_with_name
	from workspace_agents
		join workspace_resources
			on workspace_resources.id = workspace_agents.resource_id
		join workspace_builds
			on workspace_builds.job_id = workspace_resources.job_id
	where
		workspace_builds.id = workspace_build_id
		and workspace_agents.name = NEW.name
		and workspace_agents.id != NEW.id;

	-- If there's already an agent with this name, raise an error
	if agents_with_name > 0 then
		raise exception 'workspace agent name "%" already exists in this workspace build',
		NEW.name
		using ERRCODE = 'unique_violation';
	end if;

	return NEW;
end;
$$;

create trigger workspace_agent_name_unique_trigger
	before insert or update of name,
	resource_id on workspace_agents
	for each row
	execute function check_workspace_agent_name_unique();

comment on trigger workspace_agent_name_unique_trigger on workspace_agents is 'Use a trigger instead of a unique constraint because existing data may violate
the uniqueness requirement. A trigger allows us to enforce uniqueness going
forward without requiring a migration to clean up historical data.';


alter table workspace_agents drop column deleted;
